Fix spacing of images so that they are centred on large screens

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -123,8 +123,12 @@ p {
   height: auto;
 }
 
-.hero-images {
+/* .hero-images {
 text-align: center!important;
+} */
+
+.col-xl-6-left {
+  margin-right: 90;
 }
 
 .how-to {
